# localstack

./: .env.example  .gitignore  Makefile  README.md  article.md  docker-compose.yml  pyproject.toml  samconfig.toml  template.yaml
layers/custom_utils/: README.md  display.py  requirements.txt
layers/custom_utils/python/custom_utils/: __init__.py  display.py
scripts/: configure-localstack.sh
src/: __init__.py
src/handlers/hello_post/: __init__.py  app.py
src/handlers/hello_user/: __init__.py  app.py
src/handlers/hello_world/: __init__.py  app.py
tests/: __init__.py  test_lambda_handlers.py
