[tool.poetry]
name = "localstack-sam-lambdas"
version = "0.1.0"
description = "AWS SAM Lambda functions for LocalStack"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
boto3 = "^1.34.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-cov = "^4.1.0"
black = "^23.12.0"
mypy = "^1.7.1"
ruff = "^0.1.8"
aws-sam-cli = "^1.105.0"
awscli-local = "^0.22"
aws-sam-cli-local = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py312']

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
